--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
+    "com.nianticlabs.lightship": "file:C:/Users/0000a/Games/ardk-upm-3.4.0.tgz",
+    "com.nianticlabs.lightship.wps": "file:C:/Users/0000a/Games/wps-upm-3.4.0.tgz",
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.collab-proxy": "2.8.2",
     "com.unity.ide.rider": "3.0.31",
